--- a/Lucuber/ViewControllers/EditProfile/EditProfile.storyboard
+++ b/Lucuber/ViewControllers/EditProfile/EditProfile.storyboard
@@ -46,13 +46,13 @@
                                             </connections>
                                         </imageView>
                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="mh7-fF-07D">
-                                            <rect key="frame" x="112" y="185" width="151" height="24"/>
+                                            <rect key="frame" x="141" y="185" width="93.5" height="24"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_profile_phone" translatesAutoresizingMaskIntoConstraints="NO" id="5bt-JY-XMh" userLabel="Phone Image View">
                                                     <rect key="frame" x="0.0" y="0.0" width="16" height="24"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="185-0080-0404" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wG0-Hk-6k2" userLabel="Mobile Label">
-                                                    <rect key="frame" x="24" y="0.0" width="127" height="24"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="电话号码" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wG0-Hk-6k2" userLabel="Mobile Label">
+                                                    <rect key="frame" x="24" y="0.0" width="69.5" height="24"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
